En proceso de desarrollo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=APIForoHub
+spring.datasource.url=jdbc:mysql://localhost/forohub
+spring.datasource.username=root
+spring.datasource.password=systest
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
