--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password=systest
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.show-sql=true
