--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = false
 
 server.error.include-stacktrace = never
+
+jwt.secret = ${JWT_SECRET:123456}
+jwt.expiration = 2
